--- a/libs/sql/CMakeLists.txt
+++ b/libs/sql/CMakeLists.txt
@@ -5,6 +5,7 @@ file(GLOB_RECURSE SOURCE_FILES
         ${CMAKE_CURRENT_SOURCE_DIR}/include/${PROJECT_NAME}/*.h)
 
 add_library(${PROJECT_NAME} SHARED ${SOURCE_FILES})
-target_link_libraries(${PROJECT_NAME} interface)
+find_package(SQLite3)
+target_link_libraries(${PROJECT_NAME} PRIVATE interface PRIVATE SQLite::SQLite3)
 target_include_directories(${PROJECT_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/include/${PROJECT_NAME})
 target_include_directories(${PROJECT_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include/)
