--- a/libs/sql/CMakeLists.txt
+++ b/libs/sql/CMakeLists.txt
@@ -6,6 +6,7 @@ file(GLOB_RECURSE SOURCE_FILES
 
 add_library(${PROJECT_NAME} SHARED ${SOURCE_FILES})
 find_package(SQLite3)
-target_link_libraries(${PROJECT_NAME} PRIVATE interface PRIVATE SQLite::SQLite3)
+find_package(Qt6 REQUIRED COMPONENTS Core)
+target_link_libraries(${PROJECT_NAME} PRIVATE interface PRIVATE SQLite::SQLite3 Qt6::Core)
 target_include_directories(${PROJECT_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/include/${PROJECT_NAME})
 target_include_directories(${PROJECT_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include/)
