fix-[#STUDPOIP-48]:fix cmake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,7 +8,7 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${BINARY_DIR}/bin)
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${BINARY_DIR}/lib)
 set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${BINARY_DIR}/lib)
 
-add_subdirectory(libs/ps)
-add_subdirectory(libs/sql)
+add_subdirectory(bd/implementation/ps)
+add_subdirectory(bd/implementation/sql)
 add_subdirectory(bd/interface)
 add_subdirectory(main)
