--- a/bd/interface/CMakeLists.txt
+++ b/bd/interface/CMakeLists.txt
@@ -1,3 +1,3 @@
 project(interface)
-add_library(interface INTERFACE)
+add_library(${PROJECT_NAME} INTERFACE)
 target_include_directories(${PROJECT_NAME} INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}/include/${PROJECT_NAME})
