--- a/bd/implementation/sql/CMakeLists.txt
+++ b/bd/implementation/sql/CMakeLists.txt
@@ -9,4 +9,4 @@ find_package(SQLite3)
 find_package(Qt6 REQUIRED COMPONENTS Core)
 target_link_libraries(${PROJECT_NAME} PRIVATE interface PRIVATE SQLite::SQLite3 Qt6::Core)
 target_include_directories(${PROJECT_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/include/${PROJECT_NAME})
-target_include_directories(${PROJECT_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include/)
+target_include_directories(${PROJECT_NAME} PUBLIC include)
