--- a/bd/implementation/sql/CMakeLists.txt
+++ b/bd/implementation/sql/CMakeLists.txt
@@ -7,6 +7,9 @@ file(GLOB_RECURSE SOURCE_FILES
 add_library(${PROJECT_NAME} SHARED ${SOURCE_FILES})
 find_package(SQLite3)
 find_package(Qt6 REQUIRED COMPONENTS Core)
-target_link_libraries(${PROJECT_NAME} PRIVATE interface PRIVATE SQLite::SQLite3 Qt6::Core)
+target_link_libraries(${PROJECT_NAME} PUBLIC interface)
+target_link_libraries(${PROJECT_NAME} PUBLIC SQLite::SQLite3 Qt6::Core)
 target_include_directories(${PROJECT_NAME} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/include/${PROJECT_NAME})
 target_include_directories(${PROJECT_NAME} PUBLIC include)
+
+include("unittest.cmake")
